NXP-28424: Cleanup / Format